<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/coin_rv_height">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten_dp"
        app:cardCornerRadius="@dimen/ten_dp"
        app:cardElevation="@dimen/ten_dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rowCount="3">

            <LinearLayout
                android:id="@+id/section_parameters"
                android:layout_width="@dimen/rv_linear_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top_5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_parameters"
                    android:layout_width="@dimen/tw_width_75"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="@dimen/tw_width_75"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_24h"
                    android:layout_width="@dimen/tw_width_75"
                    android:layout_height="wrap_content"
                    android:text="@string/_24h"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_7d"
                    android:layout_width="@dimen/tw_width_75"
                    android:layout_height="wrap_content"
                    android:text="@string/_7d"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/market_cap"
                    android:layout_width="@dimen/tw_width_75"
                    android:layout_height="wrap_content"
                    android:text="@string/market_cap"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_data"
                android:layout_width="@dimen/linear_width_200"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginTop="@dimen/margin_top_5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coin_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_coin"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/coin_image"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_heigth"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/slash1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash" />

                    <TextView
                        android:id="@+id/coin_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btc" />

                    <TextView
                        android:id="@+id/slash2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"/>

                    <TextView
                        android:id="@+id/coin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_name"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/coin_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="155dp" />

                <TextView
                    android:id="@+id/coin_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24h_coin" />

                <TextView
                    android:id="@+id/coin_7d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7d_coin" />

                <TextView
                    android:id="@+id/coin_market_cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_cap_coin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_star"
                android:layout_width="@dimen/star_linear_width"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginTop="@dimen/margin_top_5"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_image_35"
                    android:layout_marginTop="@dimen/margin_top_image_40"
                    android:background="@drawable/custom_star" />

            </LinearLayout>

        </GridLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>